# network-config-analyzer

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ubi  MAINTAINERS.md  MANIFEST.in  README.md  SECURITY.md  _global_logging_flag.py  current_issues.txt  hyper_cube_set_interface.py  requirements.txt  setup.cfg
.github/: dependabot.yml
benchmark_code/: Logger.py  profiler_experiments.py  run_benchmarks.py  run_experiment.py
benchmark_results/: README.md
benchmarking/: README.md  TODOs.md  analyze_profile_results.py  audit.py  auditing.py  auditor.py  benchmarking_utils.py  create_report.py  create_scheme_files.py  create_yaml_files.py  generate_single_query_scheme_file.py  iter_benchmarks.py  profiling.py  run_all_benchmarks.py  run_benchmarks.py  runtime_param_logger.py  test_benchmarking.py  test_visualizations.py  timing.py  utils.py  visualize_profiler_results.py
benchmarks/: README.md
decision_diagram/: README.md  cache.py  canonical_set.py  hyper_cube_set_dd.py  internal_node.py  node.py  set_valued_decision_diagram.py  terminal_node.py
docs/: CmdLineQueriesResults.md  CommonQueryPatterns.md  IstioSupport.md  SchemeFileFormat.md  SimulatingLiveClusterMissingResources.md
experiments/: README.md  generate_sample_traces.py  role_analyzer.py  test_z3_regex.py
nca/: RESTServer.py  SchemeRunner.py  __main__.py  nca.py  nca_cli.py
network-config-analyzer/: CLExecute.py  CalicoNetworkPolicy.py  CalicoPolicyYamlParser.py  CanonicalHyperCubeSet.py  CanonicalIntervalSet.py  ClusterInfo.py  CmdlineRunner.py  ConfigFwRules.py  ConnectionSet.py  ConnectivityGraph.py  DimensionsManager.py  DirScanner.py  ExecutionAssist.py  FWRule.py  GenericIngressLikeYamlParser.py  GenericScanner.py  GenericTreeScanner.py  GenericYamlParser.py  GetVersionFromInput.py  GitScanner.py  HelmController.py  HelmScanner.py  ICMPDataSet.py  IngressPolicy.py  IngressPolicyYamlParser.py  IstioGenericYamlParser.py  IstioNetworkPolicy.py  IstioPolicyYamlParser.py  (+35 more)
(+2210 files in other folders)
