[metadata]
name = network-config-analyzer
version = file: VERSION.txt
author = Ziv Nevo
author_email = nevo@il.ibm.com
description = An analyzer for Network Policies and other connectivity-configuration resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IBM/network-config-analyzer
project_urls =
    Bug Tracker = https://github.com/IBM/network-config-analyzer/issues
    NP-Guard Home = https://np-guard.github.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = 
    nca
package_dir =
    nca = network-config-analyzer
install_requires = 
    PyGithub==1.54.1
    ruamel.yaml==0.17.21
    Flask==2.1.1
    PyYAML==6.0
    greenery==3.3.7

python_requires = >=3.8

[options.entry_points]
console_scripts =
        nca = nca.nca:nca_main
