[metadata]
name = network-config-analyzer
version = file: nca/VERSION.txt
author = Ziv Nevo
author_email = nevo@il.ibm.com
description = An analyzer for Network Policies and other connectivity-configuration resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IBM/network-config-analyzer
project_urls =
    Bug Tracker = https://github.com/IBM/network-config-analyzer/issues
    NP-Guard Home = https://np-guard.github.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    ghapi==1.0.3
    PyYAML==6.0
    greenery==4.0.0
    networkx==3.1

python_requires = >=3.8

[options.packages.find]
include = nca*

[options.package_data]
* = VERSION.txt

[options.entry_points]
console_scripts =
    nca = nca.nca_cli:nca_main
